# steslicer-binary-data

./: CMakeLists.txt  README.md
steslicer/resources/i18n/en_US/LC_MESSAGES/: fdmextruder.def.json.mo  fdmprinter.def.json.mo  steslicer.mo
steslicer/resources/i18n/ru_RU/LC_MESSAGES/: fdmextruder.def.json.mo  fdmprinter.def.json.mo  steslicer.mo
